--- a/src/style/output.css
+++ b/src/style/output.css
@@ -707,6 +707,9 @@
       max-width: 96rem !important;
     }
   }
+  .mx-15 {
+    margin-inline: calc(var(--spacing) * 15);
+  }
   .mx-20 {
     margin-inline: calc(var(--spacing) * 20);
   }
@@ -719,8 +722,17 @@
   .mt-4 {
     margin-top: calc(var(--spacing) * 4);
   }
+  .mt-6 {
+    margin-top: calc(var(--spacing) * 6);
+  }
+  .mt-10 {
+    margin-top: calc(var(--spacing) * 10);
+  }
   .mt-20 {
     margin-top: calc(var(--spacing) * 20);
+  }
+  .ml-3 {
+    margin-left: calc(var(--spacing) * 3);
   }
   .ml-20 {
     margin-left: calc(var(--spacing) * 20);
@@ -818,11 +830,14 @@
   .h-96 {
     height: calc(var(--spacing) * 96);
   }
-  .h-\[30px\] {
-    height: 30px;
+  .h-\[40px\] {
+    height: 40px;
   }
   .h-\[70px\] {
     height: 70px;
+  }
+  .h-\[128px\] {
+    height: 128px;
   }
   .h-\[130px\] {
     height: 130px;
@@ -836,11 +851,17 @@
   .h-\[190px\] {
     height: 190px;
   }
+  .h-\[291px\] {
+    height: 291px;
+  }
   .h-\[299px\] {
     height: 299px;
   }
   .h-\[320px\] {
     height: 320px;
+  }
+  .h-\[334px\] {
+    height: 334px;
   }
   .h-screen {
     height: 100vh;
@@ -866,17 +887,17 @@
   .w-20 {
     width: calc(var(--spacing) * 20);
   }
-  .w-\[30\] {
-    width: 30;
+  .w-\[40\%\] {
+    width: 40%;
   }
-  .w-\[30px\] {
-    width: 30px;
-  }
-  .w-\[70\%\] {
-    width: 70%;
+  .w-\[65px\] {
+    width: 65px;
   }
   .w-\[70px\] {
     width: 70px;
+  }
+  .w-\[85\%\] {
+    width: 85%;
   }
   .w-\[230px\] {
     width: 230px;
@@ -887,20 +908,32 @@
   .w-\[250px\] {
     width: 250px;
   }
-  .w-\[290px\] {
-    width: 290px;
-  }
   .w-\[316px\] {
     width: 316px;
   }
+  .w-\[324\] {
+    width: 324;
+  }
+  .w-\[324p\] {
+    width: 324p;
+  }
+  .w-\[324px\] {
+    width: 324px;
+  }
   .w-\[352px\] {
     width: 352px;
+  }
+  .w-\[359px\] {
+    width: 359px;
   }
   .w-\[400px\] {
     width: 400px;
   }
   .w-\[500px\] {
     width: 500px;
+  }
+  .w-\[541px\] {
+    width: 541px;
   }
   .w-full {
     width: 100%;
@@ -1048,6 +1081,9 @@
   .animate-none {
     animation: none;
   }
+  .cursor-pointer {
+    cursor: pointer;
+  }
   .touch-pinch-zoom {
     --tw-pinch-zoom: pinch-zoom;
     touch-action: var(--tw-pan-x,) var(--tw-pan-y,) var(--tw-pinch-zoom,);
@@ -1157,6 +1193,12 @@
   .auto-rows-min {
     grid-auto-rows: min-content;
   }
+  .grid-cols-1 {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
+  .grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
   .grid-cols-5 {
     grid-template-columns: repeat(5, minmax(0, 1fr));
   }
@@ -1165,6 +1207,12 @@
   }
   .grid-cols-subgrid {
     grid-template-columns: subgrid;
+  }
+  .grid-rows-3 {
+    grid-template-rows: repeat(3, minmax(0, 1fr));
+  }
+  .grid-rows-5 {
+    grid-template-rows: repeat(5, minmax(0, 1fr));
   }
   .grid-rows-none {
     grid-template-rows: none;
@@ -1315,6 +1363,12 @@
   }
   .justify-items-stretch {
     justify-items: stretch;
+  }
+  .gap-3 {
+    gap: calc(var(--spacing) * 3);
+  }
+  .gap-4 {
+    gap: calc(var(--spacing) * 4);
   }
   .gap-5 {
     gap: calc(var(--spacing) * 5);
@@ -1516,6 +1570,10 @@
     border-bottom-style: var(--tw-border-style);
     border-bottom-width: 1px;
   }
+  .border-b-2 {
+    border-bottom-style: var(--tw-border-style);
+    border-bottom-width: 2px;
+  }
   .border-l {
     border-left-style: var(--tw-border-style);
     border-left-width: 1px;
@@ -1547,20 +1605,8 @@
   .border-blue-400 {
     border-color: var(--color-blue-400);
   }
-  .border-blue-500 {
-    border-color: var(--color-blue-500);
-  }
-  .border-blue-600 {
-    border-color: var(--color-blue-600);
-  }
-  .border-blue-700 {
-    border-color: var(--color-blue-700);
-  }
-  .border-red-500 {
-    border-color: var(--color-red-500);
-  }
-  .border-red-600 {
-    border-color: var(--color-red-600);
+  .border-b-blue-500 {
+    border-bottom-color: var(--color-blue-500);
   }
   .bg-\(--my_variable\) {
     background-color: var(--my_variable);
@@ -1589,8 +1635,8 @@
   .bg-blue-700 {
     background-color: var(--color-blue-700);
   }
-  .bg-green-200 {
-    background-color: var(--color-green-200);
+  .bg-gray-300 {
+    background-color: var(--color-gray-300);
   }
   .bg-green-300 {
     background-color: var(--color-green-300);
@@ -1625,11 +1671,20 @@
     --tw-gradient-position: in oklab;
     background-image: radial-gradient(var(--tw-gradient-stops));
   }
+  .bg-\[url\(\'\'\)\] {
+    background-image: url('');
+  }
   .bg-\[url\(\'https\:\/\/i\.pinimg\.com\/736x\/0e\/3f\/95\/0e3f9534428cf5dc8978d04381fcc000\.jpg\'\)\] {
     background-image: url('https://i.pinimg.com/736x/0e/3f/95/0e3f9534428cf5dc8978d04381fcc000.jpg');
   }
+  .bg-\[url\(\'https\:\/\/i\.pinimg\.com\/736x\/6b\/61\/9b\/6b619b18f89bcdceec7e223c28e99f8e\.jpg\'\)\] {
+    background-image: url('https://i.pinimg.com/736x/6b/61/9b/6b619b18f89bcdceec7e223c28e99f8e.jpg');
+  }
   .bg-\[url\(\'https\:\/\/i\.pinimg\.com\/736x\/6c\/88\/6a\/6c886a58955b62b80b29d29a69432904\.jpg\'\)\] {
     background-image: url('https://i.pinimg.com/736x/6c/88/6a/6c886a58955b62b80b29d29a69432904.jpg');
+  }
+  .bg-\[url\(\'https\:\/\/i\.pinimg\.com\/736x\/15\/d6\/5f\/15d65f2df30d40447f4f60009a2567d1\.jpg\'\)\] {
+    background-image: url('https://i.pinimg.com/736x/15/d6/5f/15d65f2df30d40447f4f60009a2567d1.jpg');
   }
   .bg-\[url\(\'https\:\/\/i\.pinimg\.com\/736x\/17\/26\/fc\/1726fc0dfe7b8af909f8da10786f6ea7\.jpg\'\)\] {
     background-image: url('https://i.pinimg.com/736x/17/26/fc/1726fc0dfe7b8af909f8da10786f6ea7.jpg');
@@ -1646,8 +1701,17 @@
   .bg-\[url\(\'https\:\/\/i\.pinimg\.com\/736x\/39\/8c\/92\/398c921dc7b6ffe45a184c503b1575d8\.jpg\'\)\] {
     background-image: url('https://i.pinimg.com/736x/39/8c/92/398c921dc7b6ffe45a184c503b1575d8.jpg');
   }
+  .bg-\[url\(\'https\:\/\/i\.pinimg\.com\/736x\/42\/b6\/8c\/42b68cd2490f7a0467234a71b4d4d6fb\.jpg\'\)\] {
+    background-image: url('https://i.pinimg.com/736x/42/b6/8c/42b68cd2490f7a0467234a71b4d4d6fb.jpg');
+  }
+  .bg-\[url\(\'https\:\/\/i\.pinimg\.com\/736x\/52\/ad\/91\/52ad91a07d2d4b70b0042255183c4b24\.jpg\'\)\] {
+    background-image: url('https://i.pinimg.com/736x/52/ad/91/52ad91a07d2d4b70b0042255183c4b24.jpg');
+  }
   .bg-\[url\(\'https\:\/\/i\.pinimg\.com\/736x\/53\/a9\/37\/53a937cdf862da224a40f7c2cab72f75\.jpg\'\)\] {
     background-image: url('https://i.pinimg.com/736x/53/a9/37/53a937cdf862da224a40f7c2cab72f75.jpg');
+  }
+  .bg-\[url\(\'https\:\/\/i\.pinimg\.com\/736x\/54\/06\/70\/540670585f62ce43dc04a6a738efc27f\.jpg\'\)\] {
+    background-image: url('https://i.pinimg.com/736x/54/06/70/540670585f62ce43dc04a6a738efc27f.jpg');
   }
   .bg-\[url\(\'https\:\/\/i\.pinimg\.com\/736x\/61\/64\/cf\/6164cfb979d04030bb9fdc0498408248\.jpg\'\)\] {
     background-image: url('https://i.pinimg.com/736x/61/64/cf/6164cfb979d04030bb9fdc0498408248.jpg');
@@ -1660,9 +1724,6 @@
   }
   .bg-\[url\(\'https\:\/\/i\.pinimg\.com\/736x\/ad\/01\/e5\/ad01e54559612eb461e73bac5f893488\.jpg\'\)\] {
     background-image: url('https://i.pinimg.com/736x/ad/01/e5/ad01e54559612eb461e73bac5f893488.jpg');
-  }
-  .bg-\[url\(\'https\:\/\/i\.pinimg\.com\/736x\/e0\/37\/02\/e037023ce803a32781648679fc7d2af5\.jpg\'\)\] {
-    background-image: url('https://i.pinimg.com/736x/e0/37/02/e037023ce803a32781648679fc7d2af5.jpg');
   }
   .bg-none {
     background-image: none;
@@ -1836,14 +1897,17 @@
   .p-7 {
     padding: calc(var(--spacing) * 7);
   }
+  .p-8 {
+    padding: calc(var(--spacing) * 8);
+  }
   .p-9 {
     padding: calc(var(--spacing) * 9);
   }
   .p-10 {
     padding: calc(var(--spacing) * 10);
   }
-  .p-20 {
-    padding: calc(var(--spacing) * 20);
+  .px-4 {
+    padding-inline: calc(var(--spacing) * 4);
   }
   .px-5 {
     padding-inline: calc(var(--spacing) * 5);
@@ -1862,6 +1926,9 @@
   }
   .py-3 {
     padding-block: calc(var(--spacing) * 3);
+  }
+  .py-5 {
+    padding-block: calc(var(--spacing) * 5);
   }
   .text-center {
     text-align: center;
@@ -2019,11 +2086,11 @@
   .text-blue-700 {
     color: var(--color-blue-700);
   }
-  .text-green-500 {
-    color: var(--color-green-500);
-  }
   .text-green-600 {
     color: var(--color-green-600);
+  }
+  .text-green-700 {
+    color: var(--color-green-700);
   }
   .text-white {
     color: var(--color-white);
@@ -2194,6 +2261,10 @@
     --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 1px 2px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
+  .shadow-\[1px_2px_15px_rgba\(0\,0\,0\,0\.2\)\] {
+    --tw-shadow: 1px 2px 15px var(--tw-shadow-color, rgba(0,0,0,0.2));
+    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  }
   .shadow-lg {
     --tw-shadow: 0 10px 15px -3px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 4px 6px -4px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
@@ -2316,6 +2387,14 @@
   }
   .transition-normal {
     transition-behavior: normal;
+  }
+  .duration-100 {
+    --tw-duration: 100ms;
+    transition-duration: 100ms;
+  }
+  .duration-700 {
+    --tw-duration: 700ms;
+    transition-duration: 700ms;
   }
   .ease-in {
     --tw-ease: var(--ease-in);
@@ -2489,6 +2568,13 @@
     &:hover {
       @media (hover: hover) {
         background-color: var(--color-blue-600);
+      }
+    }
+  }
+  .hover\:text-blue-400 {
+    &:hover {
+      @media (hover: hover) {
+        color: var(--color-blue-400);
       }
     }
   }
@@ -2783,6 +2869,10 @@
   syntax: "*";
   inherits: false;
 }
+@property --tw-duration {
+  syntax: "*";
+  inherits: false;
+}
 @property --tw-ease {
   syntax: "*";
   inherits: false;
@@ -2800,10 +2890,6 @@
   inherits: false;
 }
 @property --tw-contain-style {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-duration {
   syntax: "*";
   inherits: false;
 }
