--- a/src/style/output.css
+++ b/src/style/output.css
@@ -830,6 +830,9 @@
   .h-96 {
     height: calc(var(--spacing) * 96);
   }
+  .h-\[00px\] {
+    height: 00px;
+  }
   .h-\[40px\] {
     height: 40px;
   }
@@ -842,6 +845,9 @@
   .h-\[130px\] {
     height: 130px;
   }
+  .h-\[150px\] {
+    height: 150px;
+  }
   .h-\[170px\] {
     height: 170px;
   }
@@ -850,6 +856,9 @@
   }
   .h-\[190px\] {
     height: 190px;
+  }
+  .h-\[200px\] {
+    height: 200px;
   }
   .h-\[291px\] {
     height: 291px;
@@ -896,8 +905,20 @@
   .w-\[70px\] {
     width: 70px;
   }
+  .w-\[80\%\] {
+    width: 80%;
+  }
+  .w-\[80\] {
+    width: 80;
+  }
   .w-\[85\%\] {
     width: 85%;
+  }
+  .w-\[90\%\] {
+    width: 90%;
+  }
+  .w-\[100\%\] {
+    width: 100%;
   }
   .w-\[230px\] {
     width: 230px;
@@ -910,12 +931,6 @@
   }
   .w-\[316px\] {
     width: 316px;
-  }
-  .w-\[324\] {
-    width: 324;
-  }
-  .w-\[324p\] {
-    width: 324p;
   }
   .w-\[324px\] {
     width: 324px;
@@ -1193,11 +1208,11 @@
   .auto-rows-min {
     grid-auto-rows: min-content;
   }
-  .grid-cols-1 {
-    grid-template-columns: repeat(1, minmax(0, 1fr));
-  }
   .grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+  .grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
   .grid-cols-5 {
     grid-template-columns: repeat(5, minmax(0, 1fr));
@@ -1207,6 +1222,9 @@
   }
   .grid-cols-subgrid {
     grid-template-columns: subgrid;
+  }
+  .grid-rows-2 {
+    grid-template-rows: repeat(2, minmax(0, 1fr));
   }
   .grid-rows-3 {
     grid-template-rows: repeat(3, minmax(0, 1fr));
@@ -1363,6 +1381,9 @@
   }
   .justify-items-stretch {
     justify-items: stretch;
+  }
+  .gap-2 {
+    gap: calc(var(--spacing) * 2);
   }
   .gap-3 {
     gap: calc(var(--spacing) * 3);
@@ -1635,6 +1656,9 @@
   .bg-blue-700 {
     background-color: var(--color-blue-700);
   }
+  .bg-gray-200 {
+    background-color: var(--color-gray-200);
+  }
   .bg-gray-300 {
     background-color: var(--color-gray-300);
   }
@@ -1719,11 +1743,17 @@
   .bg-\[url\(\'https\:\/\/i\.pinimg\.com\/736x\/97\/2d\/f3\/972df311aa38fa70896aca80666d1881\.jpg\'\)\] {
     background-image: url('https://i.pinimg.com/736x/97/2d/f3/972df311aa38fa70896aca80666d1881.jpg');
   }
+  .bg-\[url\(\'https\:\/\/i\.pinimg\.com\/736x\/a1\/56\/1b\/a1561bc56c80723d92e9c47feb851352\.jpg\'\)\] {
+    background-image: url('https://i.pinimg.com/736x/a1/56/1b/a1561bc56c80723d92e9c47feb851352.jpg');
+  }
   .bg-\[url\(\'https\:\/\/i\.pinimg\.com\/736x\/a5\/ed\/9e\/a5ed9e25f1c4f2530127480c7b13e729\.jpg\'\)\] {
     background-image: url('https://i.pinimg.com/736x/a5/ed/9e/a5ed9e25f1c4f2530127480c7b13e729.jpg');
   }
   .bg-\[url\(\'https\:\/\/i\.pinimg\.com\/736x\/ad\/01\/e5\/ad01e54559612eb461e73bac5f893488\.jpg\'\)\] {
     background-image: url('https://i.pinimg.com/736x/ad/01/e5/ad01e54559612eb461e73bac5f893488.jpg');
+  }
+  .bg-\[url\(\'https\:\/\/i\.pinimg\.com\/736x\/fd\/35\/54\/fd35547dbf5a8abdba9b0c66a6e0b86f\.jpg\'\)\] {
+    background-image: url('https://i.pinimg.com/736x/fd/35/54/fd35547dbf5a8abdba9b0c66a6e0b86f.jpg');
   }
   .bg-none {
     background-image: none;
@@ -1905,9 +1935,6 @@
   }
   .p-10 {
     padding: calc(var(--spacing) * 10);
-  }
-  .px-4 {
-    padding-inline: calc(var(--spacing) * 4);
   }
   .px-5 {
     padding-inline: calc(var(--spacing) * 5);
