--- a/src/style/output.css
+++ b/src/style/output.css
@@ -830,11 +830,17 @@
   .h-96 {
     height: calc(var(--spacing) * 96);
   }
-  .h-\[00px\] {
-    height: 00px;
+  .h-\[30px\] {
+    height: 30px;
+  }
+  .h-\[40p\] {
+    height: 40p;
   }
   .h-\[40px\] {
     height: 40px;
+  }
+  .h-\[60px\] {
+    height: 60px;
   }
   .h-\[70px\] {
     height: 70px;
@@ -856,9 +862,6 @@
   }
   .h-\[190px\] {
     height: 190px;
-  }
-  .h-\[200px\] {
-    height: 200px;
   }
   .h-\[291px\] {
     height: 291px;
@@ -905,17 +908,8 @@
   .w-\[70px\] {
     width: 70px;
   }
-  .w-\[80\%\] {
-    width: 80%;
-  }
-  .w-\[80\] {
-    width: 80;
-  }
   .w-\[85\%\] {
     width: 85%;
-  }
-  .w-\[90\%\] {
-    width: 90%;
   }
   .w-\[100\%\] {
     width: 100%;
@@ -1208,11 +1202,14 @@
   .auto-rows-min {
     grid-auto-rows: min-content;
   }
+  .grid-cols-1 {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
   .grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
-  .grid-cols-3 {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
+  .grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
   .grid-cols-5 {
     grid-template-columns: repeat(5, minmax(0, 1fr));
@@ -1223,11 +1220,11 @@
   .grid-cols-subgrid {
     grid-template-columns: subgrid;
   }
+  .grid-rows-1 {
+    grid-template-rows: repeat(1, minmax(0, 1fr));
+  }
   .grid-rows-2 {
     grid-template-rows: repeat(2, minmax(0, 1fr));
-  }
-  .grid-rows-3 {
-    grid-template-rows: repeat(3, minmax(0, 1fr));
   }
   .grid-rows-5 {
     grid-template-rows: repeat(5, minmax(0, 1fr));
@@ -1650,6 +1647,9 @@
   .bg-black\/50 {
     background-color: color-mix(in oklab, var(--color-black) 50%, transparent);
   }
+  .bg-blue-500 {
+    background-color: var(--color-blue-500);
+  }
   .bg-blue-600 {
     background-color: var(--color-blue-600);
   }
@@ -1694,9 +1694,6 @@
   .bg-radial {
     --tw-gradient-position: in oklab;
     background-image: radial-gradient(var(--tw-gradient-stops));
-  }
-  .bg-\[url\(\'\'\)\] {
-    background-image: url('');
   }
   .bg-\[url\(\'https\:\/\/i\.pinimg\.com\/736x\/0e\/3f\/95\/0e3f9534428cf5dc8978d04381fcc000\.jpg\'\)\] {
     background-image: url('https://i.pinimg.com/736x/0e/3f/95/0e3f9534428cf5dc8978d04381fcc000.jpg');
@@ -1751,9 +1748,6 @@
   }
   .bg-\[url\(\'https\:\/\/i\.pinimg\.com\/736x\/ad\/01\/e5\/ad01e54559612eb461e73bac5f893488\.jpg\'\)\] {
     background-image: url('https://i.pinimg.com/736x/ad/01/e5/ad01e54559612eb461e73bac5f893488.jpg');
-  }
-  .bg-\[url\(\'https\:\/\/i\.pinimg\.com\/736x\/fd\/35\/54\/fd35547dbf5a8abdba9b0c66a6e0b86f\.jpg\'\)\] {
-    background-image: url('https://i.pinimg.com/736x/fd/35/54/fd35547dbf5a8abdba9b0c66a6e0b86f.jpg');
   }
   .bg-none {
     background-image: none;
